example/resources/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: example
  labels:
    app: example
spec:
  selector:
    app: example
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
