example/resources/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example
  labels:
    app: example
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: example
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
